# YUGI-AI

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12796c36debe_initial_auth.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  health.py  router.py
backend/app/api/v1/auth/: __init__.py  router.py  schemas.py
backend/app/application/: __init__.py  base.py
backend/app/application/auth/: __init__.py  audit_service.py  auth_service.py  dtos.py  password_service.py
backend/app/core/: __init__.py  config.py  constants.py  deps.py  exceptions.py  logging.py  security.py  telemetry.py  types.py
backend/app/domain/: __init__.py  base.py  interfaces.py
backend/app/domain/auth/: __init__.py  entities.py  events.py  repositories.py
backend/app/infrastructure/: __init__.py  database.py  rate_limiter.py  redis.py
backend/app/infrastructure/auth/: __init__.py  audit_repository.py  models.py  session_repository.py  user_repository.py
backend/app/middleware/: __init__.py  correlation_id.py  exception_handler.py  rate_limiter.py
backend/app/tests/: test_smoke.py
docs/: ARCHITECTURE_DECISIONS.md  DESIGN_SYSTEM.md
frontend/: .dockerignore  .env.example  Dockerfile  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: main.tsx
frontend/src/api/: axios.ts
frontend/src/components/ui/: form.tsx  toast.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  RootLayout.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: authService.ts
frontend/src/store/: useAuthStore.ts
frontend/src/types/: auth.ts
nginx/: nginx.conf  nginx.dev.conf
scripts/: init-db.sh
